5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1582_2897.log
== TEST (2019-03-19 09:19:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(6)

# Impressao do dobro do numero
print(12)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:20:01) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(6)

# Impressao do dobro do numero
print(12)
-- EXECUTION TIME:
0.148245
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:20:34) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(12)
-- OUTPUT:
612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:20:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(12)
-- EXECUTION TIME:
0.152948
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
612
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
612
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:21:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(6
					))

# Impressao do dobro do numero
print(12)
-- OUTPUT:
612
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:21:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("6"))

# Impressao do dobro do numero
print(12)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:21:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("6"))

# Impressao do dobro do numero
print(12)
-- EXECUTION TIME:
0.131131
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
12
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:22:36) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input(12))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var=input(12))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:22:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input(12))
-- EXECUTION TIME:
0.180519
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(var=input(12))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:34:27) 
-- CODE:
# Use este codigo como ponto de partida
6
# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input(12))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var=input(12))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:34:51) 
-- CODE:
# Use este codigo como ponto de partida
print(6)
# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input(12))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var=input(12))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:34:55) 
-- CODE:
# Use este codigo como ponto de partida
print(6)
# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input(12))
-- EXECUTION TIME:
0.249869
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(var=input(12))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:56:30) 
-- CODE:
# Use este codigo como ponto de partida
print(6)
# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input(6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var=input(6))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:56:34) 
-- CODE:
# Use este codigo como ponto de partida
print(6)
# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input(6))
-- EXECUTION TIME:
0.191725
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(var=input(6))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:58:15) 
-- CODE:
# Use este codigo como ponto de partida
print(6)
# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input(?))
-- ERROR:
File "XXXX", line 7
    print(var=input(?))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:58:29) 
-- CODE:
# Use este codigo como ponto de partida
print(6)
# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var=input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:58:38) 
-- CODE:
# Use este codigo como ponto de partida
print(6)
# Leitura de valores de entrada e conversao para inteiro
num = int(input(6))

# Impressao do dobro do numero
print(var=input())
-- EXECUTION TIME:
0.175389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(var=input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:59:23) 
-- CODE:
# Use este codigo como ponto de partida
print(6)
# Leitura de valores de entrada e conversao para inteiro
num = int(input('seis'))

# Impressao do dobro do numero
print(var=input())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var=input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 09:59:51) 
-- CODE:
# Use este codigo como ponto de partida
print('seis')
# Leitura de valores de entrada e conversao para inteiro
num = int(input('seis'))

# Impressao do dobro do numero
print(var=input('doze'))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(var=input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 09:59:57) 
-- CODE:
# Use este codigo como ponto de partida
print('seis')
# Leitura de valores de entrada e conversao para inteiro
num = int(input('seis'))

# Impressao do dobro do numero
print(var=input('doze'))
-- EXECUTION TIME:
0.132526
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/2897/main.py", line 7, in <module>
    print(var=input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:34:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('Digite o numero: 6'))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:34:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('Digite o numero: 6'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.186685
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:03:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('6'))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:03:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('6'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.196055
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:03:52) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('1'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.14281
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:03:56) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('1'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.199076
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:04:04) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('101'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.203506
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:04:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('101'))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:04:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('101'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.158152
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:07:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('101'))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:07:43) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('101'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.132542
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:08:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('66'))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:08:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(66))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
662468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:08:27) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(66))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.1417
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
662468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
66888
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:09:11) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('66'))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:09:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('66'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.126596
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:04:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('66'))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.1476
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:04:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input('66'))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
